--- a/src/views/containers/TicketSummary/TicketSummary.module.css
+++ b/src/views/containers/TicketSummary/TicketSummary.module.css
@@ -2,9 +2,12 @@
 
 /* General Container for the Ticket Summary Section */
 .ticketSummaryContainer {
-    padding: 20px;
+    padding: 1.5rem;
     background-color: #ffffff;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
 }
 
 .headerActions {
